--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
+    "mongo-oplog": "^2.0.2",
     "mongoose": "^4.11.6",
     "multer": "^1.3.0",
     "papaparse": "^4.3.5",
