--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max_old_space_size=4000  index.js "
+    "start": "node --max_old_space_size=999999  index.js "
   },
   "author": "",
   "license": "ISC",
@@ -26,12 +26,14 @@
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
     "jquery": "^3.2.1",
+    "jquery-circle-progress": "^1.2.2",
     "mongo-oplog": "^2.0.2",
     "mongoose": "^4.11.6",
     "multer": "^1.3.0",
     "papaparse": "^4.3.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "progressbar.js": "^1.0.1",
     "pug": "^2.0.0-rc.3",
     "socket.io": "^2.0.3"
   },
